# vibesurfer

./: .gitattributes  .gitignore  ARCHITECTURE.md  CAMERA_REFACTOR.md  CLAUDE.md  CODE_MAP.md  COVERAGE_REPORT.md  Cargo.toml  FLOWFIELD.md  LEARNINGS.md  LEXICON.md  LOC_REPORT.md  README.md  REFACTOR_PLAN.md  STUDY_PLAN.md  VISION.md
.cargo/: config.toml
learnings/: gpu_compute_fundamentals.md  naga-architecture.md  naga-reference.md  naga-translation.md  naga-validation.md  wgpu_compute_integration.md  wgsl_compute_patterns.md
learnings/.ddd/: 0_compute_shaders_complete.md  0_naga_research_assessment.md  open_questions.md
scripts/: combine-recording.sh  generate-coverage-report.sh  generate-loc-report.sh
src/: audio.rs  camera.rs  cli.rs  lib.rs  main.rs  ocean.rs  params.rs  rendering.rs  shader.wgsl  skybox.wgsl  terrain_compute.wgsl
src/audio/: synthesis.rs  system.rs
src/ocean/: mesh.rs  system.rs
src/params/: audio.rs  camera.rs  mod.rs  ocean.rs  render.rs
toys/toy1_gpu_noise_match/: Cargo.toml
toys/toy1_gpu_noise_match/.ddd/: LEARNINGS.md  PLAN.md  SPEC.md
toys/toy1_gpu_noise_match/src/: noise.wgsl
toys/toy2_gpu_terrain_pipeline/: Cargo.toml
toys/toy2_gpu_terrain_pipeline/.ddd/: LEARNINGS.md  PLAN.md  SPEC.md
toys/toy2_gpu_terrain_pipeline/src/: lib.rs  main.rs  terrain_compute.wgsl  terrain_render.wgsl  test_render.rs
toys/toy3_infinite_camera/: Cargo.toml  MATH_REVIEW.md
toys/toy3_infinite_camera/.ddd/: LEARNINGS.md  PLAN.md  SPEC.md
toys/toy3_infinite_camera/src/: lib.rs  main.rs  terrain_compute.wgsl  terrain_render.wgsl  test_render.rs
toys/toy4_spherical_chunks/: Cargo.toml
toys/toy4_spherical_chunks/.ddd/: LEARNINGS.md  SPEC.md
toys/toy4_spherical_chunks/src/: lib.rs  main.rs  sphere_compute.wgsl  sphere_render.wgsl  test_render.rs
toys/toy5_naga_exploration/: Cargo.toml  README.md
toys/toy5_naga_exploration/.ddd/: LEARNINGS.md  PLAN.md  SPEC.md
toys/toy5_naga_exploration/src/: main.rs
vibesurfer/: Cargo.toml
vibesurfer/src/: noise.rs  ocean_compute.wgsl  rendering.rs  shader.wgsl  terrain_compute.wgsl
vibesurfer/src/audio/: fft.rs  mod.rs
vibesurfer/src/ocean/: mod.rs
