[workspace]
resolver = "2"
members = [
    "vibesurfer",
    "toys/toy1_gpu_noise_match",
    "toys/toy2_gpu_terrain_pipeline",
    "toys/toy3_infinite_camera",
    "toys/toy4_spherical_chunks",
]

# Shared workspace configuration
[workspace.package]
version = "0.1.0"
edition = "2021"

# Optimize dependencies for faster dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
