[package]
name = "toy4_spherical_chunks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Window + GPU
winit = "0.30"
wgpu = "22.1"
pollster = "0.3"

# Math
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# Utilities
env_logger = "0.11"
log = "0.4"
image = "0.25"

[[bin]]
name = "toy4_spherical_chunks"
path = "src/main.rs"

[[bin]]
name = "test_render"
path = "src/test_render.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
